added mongoHQ url

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,3 +1,8 @@
+//want to get rid of this later, but right now required:
+script(type='text/javascript', src="http://code.jquery.com/jquery-latest.js")
+script(type='text/javascript', src="/js/thirdparty/jquery-ui-1.10.2.custom.min.js")
+script(type='text/javascript', src='/js/thirdparty/bootstrap.min.js')
+
 //AngularJS
 script(type='text/javascript', src='/lib/angular/angular.js')
 script(type='text/javascript', src='/lib/angular-cookies/angular-cookies.js')
