--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,6 +1,18 @@
 extends layouts/default
 
 block content
-  section(data-ng-view)
-  script(type="text/javascript").
-    window.user = !{user};
+	if (isLoggedIn)
+		div.content
+			div.skins-nav
+				a.skin.first_nav.selected(href="#")
+					span.icon
+						span.text Default skin
+				a.skin.second_nav(href="#", data-file="css/compiled/skins/dark.css")
+					span.icon
+						span.text Dark skin
+			div.view-container
+				div.view-frame(data-ng-view)
+	else				
+		section(data-ng-view)
+	script(type="text/javascript").
+		window.user = !{user};
