seperated the front end into jade templates and the authenticated app into angularJS, better to keep it seperate this way

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,7 +1,13 @@
 //want to get rid of this later, but right now required:
 script(type='text/javascript', src="http://code.jquery.com/jquery-latest.js")
 script(type='text/javascript', src="/js/thirdparty/jquery-ui-1.10.2.custom.min.js")
-script(type='text/javascript', src='/js/thirdparty/bootstrap.min.js')
+script(type='text/javascript', src='/js/thirdparty/bootstrap.min.js')<!-- knob -->
+script(type='text/javascript', src="/js/thirdparty/jquery.knob.js")
+script(type='text/javascript', src="/js/thirdparty/jquery.flot.js")
+script(type='text/javascript', src="/js/thirdparty/jquery.flot.stack.js")
+script(type='text/javascript', src="/js/thirdparty/jquery.flot.resize.js")
+script(type='text/javascript', src="/js/thirdparty/theme.js")
+
 
 //AngularJS
 script(type='text/javascript', src='/lib/angular/angular.js')
