--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -13,6 +13,6 @@ block content
 			div.view-container
 				div.view-frame(data-ng-view)
 	else				
-		section(data-ng-view)
+		include ./pages/home
 	script(type="text/javascript").
 		window.user = !{user};
