--- a/public/views/navigation/navlist.html
+++ b/public/views/navigation/navlist.html
@@ -37,9 +37,8 @@
         </div>
       </div>
     </div>
-
-
 <!-- end navbar not authenticated -->
+
 <!-- navbar is authenticated-->
 <div class="navbar navbar-inverse" data-ng-show="global.authenticated">
     <div class="navbar-inner">
@@ -49,7 +48,7 @@
             <span class="icon-bar"></span>
         </button>
         
-        <a class="brand" href="index.html"><!--<img src="img/logo.png" alt="logo" />-->SolarMongo</a>
+        <a class="brand" href="#!/dashboard"><!--<img src="img/logo.png" alt="logo" />-->SolarMongo</a>
 
         <ul class="nav pull-right">
             <li class="hidden-phone">
@@ -78,7 +77,7 @@
                 <div class="arrow"></div>
                 <div class="arrow_border"></div>
             </div>
-            <a ng-href="#/{{list.route}}">
+            <a ng-href="#!/{{list.route}}">
                 <i class="{{list.icon}}"></i>
                 <span>{{list.name}}</span>
             </a>
