fixed jadeand create.html

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -11,7 +11,7 @@ block content
 					span.icon
 						span.text Dark skin
 			div.view-container
-				div.view-frame(data-ng-view)
+				div.container-fluid(data-ng-view)
 	else				
 		include ./pages/home
 	script(type="text/javascript").
