--- a/public/views/navigation/navlist.html
+++ b/public/views/navigation/navlist.html
@@ -85,3 +85,6 @@
     </ul>
 </div>
 <!-- end sidebar -->
+<!-- this is a jquery hack to get things working responsively, in the future 
+    I would like this to be handled by our angular bootstrap ui, not jquery-->
+<script type='text/javascript' src="../js/thirdparty/theme.js"></script>
