--- a/public/views/leads/create.html
+++ b/public/views/leads/create.html
@@ -1,142 +1,195 @@
-<div id="pad-wrapper" class="form-page" data-ng-controller="LeadsController">
-    <div class="row form-wrapper">
-        <!-- left column -->
-        <div class="col-md-8 column">
-            <form name="lead_form" novalidate ng-submit="addLead()">
-                <div class="field-box">
-                    <label>Name:</label>
-                    <div class="col-md-3">
-                        <input class="form-control"
-                            type="text"
-                            placeholder="First Name"
-                            name="fistName" 
-                            ng-model="lead.firstName" 
-                            maxlength="30"
-                            required />
-                    </div>
-                    <div class="col-md-3">
-                        <input class="form-control"
-                            type="text"
-                            placeholder="Last Name"
-                            name="lastName" 
-                            ng-model="lead.lastName" 
-                            maxlength="30"
-                            required />
-                    </div>
-                    <div class="error col-md-2" 
-                        ng-show="lead_form.submitted">
+<div id="pad-wrapper" class="new-user" data-ng-controller="LeadsController">
+    <div class="row-fluid header">
+        <div class="row-fluid form-wrapper">
+            <div class="span9 with-sidebar">
+                <form class="new_user_form">
+                    <div class="span12 field-box">
+                        <label>Name:</label>
+                        <input type="text" data-ng-model="firstName" placeholder="First Name" class="span12 small-inline" maxlength="30" required>
+                        <input type="text" data-ng-model="lastName" placeholder="Last Name" class="span12 small-inline last" maxlength="30" required>
+                        <div class="error col-md-2" 
+                            data-ng-show="lead_form.submitted">
                         <small class="error" 
-                            ng-show="lead_form.fistName.$invalid && lead_form.fistName.$error.required">
+                            data-ng-show="lead_form.firstName.$invalid && lead_form.firstName.$error.required">
                             First Name is required.
                         </small>
                         <small class="error" 
-                            ng-show="lead_form.lastName.$invalid && lead_form.lastName.$error.required">
+                            data-ng-show="lead_form.lastName.$invalid && lead_form.lastName.$error.required">
                             Last Name is required.
                         </small>
                     </div>
-                    <!--<div class="col-md-3">
-                        <input name="lastName" ng-model="leadForm.lastName" required class="form-control" type="text"  placeholder="Last Name"/>
                     </div>
-                    <div>leadForm.submitted = {{leadForm.submitted}} invalid={{leadForm.firstName.$invalid}}</div>
-                    <div class="error col-md-2" 
-                        ng-show="signup_form.name.$invalid && signup_form.submitted">
-                        <small class="error" 
-                            ng-show="signup_form.name.$error.required">
-                            First name is required.
-                        </small>
-                    </div>          -->                    
-                </div>
-                <div class="field-box">
-                    <label>Company Name:</label>
-                    <div class="col-md-6">
-                        <input class="form-control" type="text" name="companyName" ng-model="lead.companyName"/>
-                    </div>                  
-                </div>
-                <div class="field-box">
-                    <label>Title:</label>
-                    <div class="col-md-6">
-                        <input class="form-control" type="text" name="leadTitle" ng-model="lead.leadTitle"/>
-                    </div>                  
-                </div>
-                <div class="field-box">
-                    <label>Status:</label>
-                    <div class="ui-select">
-                        <select name="leadStatus" ng-model="lead.leadStatus">
-                            <option selected>New</option>
-                            <option>Working</option>
-                            <option>Unqualified</option>
-                        </select>
+                    <div class="span12 field-box">
+                        <label>Company:</label>
+                        <input class="span9" type="text" name="companyName" data-ng-model="companyName"/>
                     </div>
-                </div>
-                <div class="field-box">
-                    <label>Email Address:</label>
-                    <div class="col-md-6">
-                        <input class="form-control" type="text" name="email" ng-model="lead.email"/>
-                    </div>                  
-                </div>
-                <div class="field-box">
-                    <label>Phone:</label>
-                    <div class="col-md-3">
-                        <input class="form-control" type="text" name="mobile" ng-model="lead.phoneMobile" placeholder="Mobile"/>
+                    <div class="span12 field-box">
+                        <label>Title:</label>
+                        <input class="span9" type="text" name="title" data-ng-model="title"/>
                     </div>
-                    <div class="col-md-3">
-                        <input class="form-control" type="text" name="Work" ng-model="lead.phoneWork" placeholder="Work"/>
-                    </div>                              
-                </div>
-                <div class="field-box">
-                    <label>Address:</label>
-                    <div class="col-md-6">
-                        <input class="form-control" type="text" name="address" ng-model="lead.address"/>
-                    </div>                  
-                </div>
-                <div class="field-box">
-                    <label></label>
-                    <div class="col-md-2">
-                        <input class="form-control" type="text" name="city" ng-model="lead.city" placeholder="City"/>
-                    </div>
-                    <div class="col-md-2">
-                        <input class="form-control" type="text" name="state" ng-model="lead.state" placeholder="State"/>
-                    </div>
-                    <div class="col-md-2">
-                        <input class="form-control" type="text" name="zip" ng-model="lead.zip" placeholder="Zip"/>
-                    </div>                             
-                </div>
-                <div class="field-box">
-                    <label>Country:</label>
-                    <div class="col-md-6">
-                        <input class="form-control" type="text" name="country" ng-model="lead.country"/>
-                    </div>                  
-                </div>
-                <div class="field-box">
-                    <label></label>
-                    <div class="col-md-6">
-                        <div class="ui-group pull-right">
-                            <a href="#/leads" class="btn-flat white">Cancel</a>
-                            <button type="submit" class="btn-flat primary">Save</button>
+                    <div class="span12 field-box">
+                        <label>State:</label>
+                        <div class="ui-select span5">
+                            <select>
+                                <option value="AK">Alaska</option>
+                                <option value="HI">Hawaii</option>
+                                <option value="CA">California</option>
+                                <option value="NV">Nevada</option>
+                                <option value="OR">Oregon</option>
+                                <option value="WA">Washington</option>
+                                <option value="AZ">Arizona</option>
+                            </select>
                         </div>
                     </div>
-            </form>
-        </div>
-    </div>
-</div>
-<section >
-	<form class="form-horizontal" data-ng-submit="create()">
-		<div class="control-group">
-			<label class="control-label" for="title">Title</label>
-			<div class="controls">
-				<input type="text" data-ng-model="title" id="title" placeholder="Title" required>
-			</div>
-		</div>
-		<div class="control-group">
-			<label class="control-label" for="content">Content</label>
-			<div class="controls">
-				<textarea data-ng-model="content" id="content" cols="30" rows="10" placeholder="Content"></textarea>
-			</div>
-		</div>
-		<div class="control-group">
-			<div class="controls">
-				<input type="submit" class="btn">
-			</div>
-		</div>
-	</form>
-</section>
+                    <div class="span12 field-box">
+                        <label>Email:</label>
+                        <input type="text" class="span9">
+                    </div>
+                    <div class="span12 field-box">
+                        <label>Phone:</label>
+                        <input type="text" class="span9">
+                    </div>
+                    <div class="span12 field-box">
+                        <label>Website:</label>
+                        <input type="text" class="span9">
+                    </div>
+                    <div class="span12 field-box">
+                        <label>Address:</label>
+                        <div class="address-fields">
+                            <input type="text" placeholder="Street address" class="span12">
+                            <input type="text" placeholder="City" class="span12 small">
+                            <div id="state" class="ui-select small">
+                                <select>
+                                    <option value="AK">Alaska</option>
+                                    <option value="HI">Hawaii</option>
+                                    <option value="CA">California</option>
+                                    <option value="NV">Nevada</option>
+                                    <option value="OR">Oregon</option>
+                                    <option value="WA">Washington</option>
+                                    <option value="AZ">Arizona</option>
+                                </select>
+                            </div>
+                            <input type="text" placeholder="Postal Code" class="span12 small last">
+                        </div>
+                    </div>
+                    <div class="span12 field-box textarea">
+                        <label>Notes:</label>
+                        <textarea class="span9"></textarea>
+                        <span class="charactersleft">90 characters remaining. Field limited to 100 characters</span>
+                    </div>
+                    <div class="span11 field-box actions">
+                        <input type="button" value="Create user" class="btn-glow primary">
+                        <span>OR</span>
+                        <input type="reset" class="reset" value="Cancel">
+                    </div>
+                </form>
+                <div id="pad-wrapper" class="form-page" data-ng-controller="LeadsController">
+                    <div class="row form-wrapper">
+                        <!-- left column -->
+                        <div class="col-md-8 column">
+                            <form name="lead_form" novalidate data-ng-submit="create()">
+                                <div class="field-box">
+                                    <label>Name:</label>
+                                    <div class="col-md-3">
+                                        <input class="form-control"
+                                            type="text"
+                                            placeholder="First Name"
+                                            name="firstName" 
+                                            data-ng-model="firstName" 
+                                            maxlength="30"
+                                            required />
+                                    </div>
+                                    <div class="col-md-3">
+                                        <input class="form-control"
+                                            type="text"
+                                            placeholder="Last Name"
+                                            name="lastName" 
+                                            data-ng-model="lastName" 
+                                            maxlength="30"
+                                            required />
+                                    </div>
+                                    <div class="error col-md-2" 
+                                        data-ng-show="lead_form.submitted">
+                                        <small class="error" 
+                                            data-ng-show="lead_form.firstName.$invalid && lead_form.firstName.$error.required">
+                                            First Name is required.
+                                        </small>
+                                        <small class="error" 
+                                            data-ng-show="lead_form.lastName.$invalid && lead_form.lastName.$error.required">
+                                            Last Name is required.
+                                        </small>
+                                    </div>  
+                                </div>
+                                <div class="field-box">
+                                    <label>Company Name:</label>
+                                    <div class="col-md-6">
+                                        <input class="form-control" type="text" name="companyName" data-ng-model="companyName"/>
+                                    </div>                  
+                                </div>
+                                <div class="field-box">
+                                    <label>Title:</label>
+                                    <div class="col-md-6">
+                                        <input class="form-control" type="text" name="leadTitle" data-ng-model="leadTitle"/>
+                                    </div>                  
+                                </div>
+                                <div class="field-box">
+                                    <label>Status:</label>
+                                    <div class="ui-select">
+                                        <select name="leadStatus" data-ng-model="leadStatus">
+                                            <option selected>New</option>
+                                            <option>Working</option>
+                                            <option>Unqualified</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="field-box">
+                                    <label>Email Address:</label>
+                                    <div class="col-md-6">
+                                        <input class="form-control" type="text" name="email" data-ng-model="email"/>
+                                    </div>                  
+                                </div>
+                                <div class="field-box">
+                                    <label>Phone:</label>
+                                    <div class="col-md-3">
+                                        <input class="form-control" type="text" name="mobile" data-ng-model="phoneMobile" placeholder="Mobile"/>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <input class="form-control" type="text" name="work" data-ng-model="phoneWork" placeholder="Work"/>
+                                    </div>                              
+                                </div>
+                                <div class="field-box">
+                                    <label>Address:</label>
+                                    <div class="col-md-6">
+                                        <input class="form-control" type="text" name="address" data-ng-model="address"/>
+                                    </div>                  
+                                </div>
+                                <div class="field-box">
+                                    <label></label>
+                                    <div class="col-md-2">
+                                        <input class="form-control" type="text" name="city" data-ng-model="city" placeholder="City"/>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <input class="form-control" type="text" name="state" data-ng-model="state" placeholder="State"/>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <input class="form-control" type="text" name="zip" data-ng-model="zip" placeholder="Zip"/>
+                                    </div>                             
+                                </div>
+                                <div class="field-box">
+                                    <label>Country:</label>
+                                    <div class="col-md-6">
+                                        <input class="form-control" type="text" name="country" data-ng-model="country"/>
+                                    </div>                  
+                                </div>
+                                <div class="field-box">
+                                    <label></label>
+                                    <div class="col-md-6">
+                                        <div class="ui-group pull-right">
+                                            <a href="#/leads" class="btn-flat white">Cancel</a>
+                                            <button type="submit" class="btn-flat primary">Save</button>
+                                        </div>
+                                    </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
