--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -43,6 +43,7 @@ head
     link(rel="stylesheet", href="css/compiled/form-showcase.css", media="screen")
     link(rel="stylesheet", href="css/lib/select2.css")
     link(rel="stylesheet", href='css/compiled/tables.css')
+    link(rel="stylesheet", href='css/compiled/new-user.css')
   else
     link(rel="stylesheet" href="css/views/home.css")
   link(rel="stylesheet" href="css/compiled/elements.css")
