--- a/app/views/pages/home.jade
+++ b/app/views/pages/home.jade
@@ -1,10 +1,10 @@
 .container
     .hero-unit
-        h1 Welcome to Solar Mongo!
+        h1 Run your entire solar business from anywhere
         p
-          | We've met with real solar companies to be able to provide you with the modern cutting edge sofware for your solar business. Say goodbye to your notepad, and start using an online solution! Need help? Upon sign up, our technicians are available to give you free 1 on 1 coaching to get you and your company up to speed as fast as possible!
+          | SolarMongo's mobile technologies give solar business owners and contractors the ability to have all their tools in their hands at all times.
         p
-          a.btn.btn-primary.btn-large(href='#') Schedule a personal conference now! »
+          a.btn.btn-primary.btn-large(href='#') Sign Up!
       .row
         .span4
           h2 Google Docs, gone!
@@ -26,4 +26,4 @@
             a.btn(href='#') View product video »
       hr
     footer
-      p &copy; SolarMongo 2013
+      p &copy; SolarMongo 2014
