--- a/app/views/pages/home.jade
+++ b/app/views/pages/home.jade
@@ -2,26 +2,26 @@
     .hero-unit
         h1 Run your entire solar business from anywhere
         p
-          | SolarMongo's mobile technologies give solar business owners and contractors the ability to have all their tools in their hands at all times.
+          | SolarMongo's mobile technologies give solar contractors the ability to have all their tools in their hands at all times.
         p
           a.btn.btn-primary.btn-large(href='#') Sign Up!
       .row
         .span4
-          h2 Google Docs, gone!
+          h2 Don't get bogged down in operational inefficiency!
           p
-            | Don't get caught up in the details, let SolarMongo do that! Keep track of all your customer info online. Upload pictures, receipts, invoices, and keep track of Cad drawings all in one place in the cloud.
+            | Reduce your cycle time by at least 30% as well as operational costs through our automated system for tracking paperwork electronically. 
           p
             a.btn(href='#') View a demo »
         .span4
-          h2 iPhone and ipad!
+          h2 Generate quotes and estimates on the fly!
           p
-            | Not only does our system have the web, you can now carry your ipad to customers and record data onsite!  Our site surveys are made to be mobile and customizable to your needs!
+            | Ditch the confusing spreadsheets. Explaining and generating quotes for your potential customers has never been easier.
           p
             a.btn(href='#') Check out a mobile demo »
         .span4
-          h2 Android
+          h2 Paperless + Mobility
           p
-            | Don't have an ios device? We have an android app ready to use.  Don't bring a pen and paper onsite! Use instead quotes and site surveys with our mobile android app!
+            | With our mobile apps and mobile web technologies, sales and installation in solar has never been more paperless and automated. All your documents are centralized making your solar business workflow easier than ever
           p
             a.btn(href='#') View product video »
       hr
