--- a/app/views/pages/aboutUsPage.jade
+++ b/app/views/pages/aboutUsPage.jade
@@ -3,7 +3,7 @@
         h1 About Us
         h3 History
         p
-          | SolarMongo has had relationships with solar contractors and in 2013, research began on the current way of managing solar customers and leads information. The research proved a need to have a mobile solution for contractors that are constantly outside the office as well as a central system that gives you access to all your solar business information. So instead of bouncing from cabinets full of paperwork or from site to site, you can just login to SolarMongo and run your solar business flawlessly.
+          | SolarMongo has had relationships with solar contractors and in 2013, research began on the current way of managing solar customers and leads information. The research proved a need to have a mobile solution for contractors that are constantly outside the office as well as a centralized collaborative system that gives you access to all your solar business information in one place. SolarMongo can reduce cycle time by 40% by automating and tracking paperwork electronically, and providing a mobile collaboration platform for all stakeholders of the solar install process.
 
         p
         
