--- a/app/views/pages/contactUsPage.jade
+++ b/app/views/pages/contactUsPage.jade
@@ -20,7 +20,7 @@
             input(type='text',name='email',id='email') 
 
             label(for='inquiry') Inquiry *
-            input(type='textarea',name='inquiry',id='inquiry',class='span5',rows='30')
+            input(type='text',name='inquiry',id='inquiry',class='span5',rows='30')
 
           input(type='submit',name='submit',value='Submit').submit-button
 
